--- a/telusko/templates/home.html
+++ b/telusko/templates/home.html
@@ -1,1 +1,15 @@
+{% extends 'base.html' %} {% block content %}
+
 <h1>Hello {{name}}!!!!</h1>
+
+<form action="add" method="post">
+    
+    <!-- This is a security token used for POST -->
+    {% csrf_token %}
+
+	Enter 1st Number: <input type="text" name="num1" /><br />
+	Enter 2nd Number: <input type="text" name="num2" /><br />
+	<button type="submit">Submit</button>
+</form>
+
+{% endblock %}
